# GE-telegram-resourceBot

./: .env  pyproject.toml
src/: main.py
src/bot/: keyboards.py  states.py
src/bot/handlers/: admin.py  inline_search.py  search.py  user.py
src/database/: firestore_service.py  seed.py
src/utils/: i18n.py
